--- a/doc/requirements-doc.txt
+++ b/doc/requirements-doc.txt
@@ -4,32 +4,32 @@ git+https://github.com/ray-project/tune-sklearn@master#tune-sklearn
 watchfiles # Required because sphinx-click doesn't support mocking
 
 # Syntax highlighting
-Pygments==2.13.0
+Pygments
 
 # Sphinx
-sphinx==4.3.2
-sphinx-click==3.0.2
-sphinx-copybutton==0.4.0
-sphinxemoji==0.2.0
-sphinx-jsonschema==1.17.2
-sphinx-version-warning==1.1.2
-sphinx-book-theme==0.3.3
-sphinx-external-toc==0.2.4
-sphinx-sitemap==2.2.0
-sphinxcontrib-redoc==1.6.0
-sphinx-tabs==3.4.0
-sphinx-remove-toctrees==0.0.3
-autodoc_pydantic==1.6.1
-sphinx_design==0.4.1
+sphinx
+sphinx-click
+sphinx-copybutton
+sphinxemoji
+sphinx-jsonschema
+sphinx-version-warning
+sphinx-book-theme
+sphinx-external-toc
+sphinx-sitemap
+sphinxcontrib-redoc
+sphinx-tabs
+sphinx-remove-toctrees
+autodoc_pydantic
+sphinx_design
 
 pydantic<2 # Pydantic is required by autodoc_pydantic, but must be <2 for ray
 
 # MyST
-myst-parser==0.15.2
-myst-nb==0.13.1
+myst-parser
+myst-nb
 
 # Jupyter conversion
-jupytext==1.13.6
+jupytext
 
 # Pin urllib to avoid downstream ssl incompatibility issues
 urllib3 < 1.27
