--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -25,6 +25,8 @@ absl-py==1.4.0
     #   tf-slim
 accelerate==0.20.3
     # via -r /ray/ci/../python/requirements/ml/core-requirements.txt
+accessible-pygments==0.0.4
+    # via pydata-sphinx-theme
 adal==1.2.7
     # via msrestazure
 aim==3.17.5
@@ -45,7 +47,7 @@ aiofiles==22.1.0
     # via
     #   aim
     #   ypy-websocket
-aiohttp==3.8.5
+aiohttp==3.8.6
     # via
     #   -r /ray/ci/../python/requirements.txt
     #   aiobotocore
@@ -134,8 +136,7 @@ attrs==21.4.0
     #   pytest
     #   sarif-om
     #   semgrep
-    #   sphinx-external-toc
-autodoc-pydantic==1.6.1
+autodoc-pydantic==1.9.0
     # via -r /ray/ci/../doc/requirements-doc.txt
 autograd==1.6.2
     # via pymoo
@@ -143,9 +144,9 @@ autorom==0.6.1 ; platform_machine != "arm64"
     # via -r /ray/ci/../python/requirements/ml/rllib-test-requirements.txt
 autorom-accept-rom-license==0.6.1
     # via autorom
-aws-sam-translator==1.76.0
+aws-sam-translator==1.78.0
     # via cfn-lint
-aws-xray-sdk==2.12.0
+aws-xray-sdk==2.12.1
     # via moto
 ax-platform==0.3.2 ; python_version >= "3.8"
     # via -r /ray/ci/../python/requirements/ml/tune-requirements.txt
@@ -180,6 +181,7 @@ azure-mgmt-resource==20.0.0
 babel==2.13.0
     # via
     #   jupyterlab-server
+    #   pydata-sphinx-theme
     #   sphinx
 backcall==0.2.0
     # via ipython
@@ -203,7 +205,7 @@ beautifulsoup4==4.11.1
     #   pydata-sphinx-theme
 black==22.10.0
     # via -r /ray/ci/../python/requirements/lint-requirements.txt
-bleach==6.0.0
+bleach==6.1.0
     # via nbconvert
 blessed==1.20.0
     # via gpustat
@@ -257,7 +259,7 @@ cffi==1.16.0
     #   pymunk
     #   pynacl
     #   soundfile
-cfn-lint==0.80.4
+cfn-lint==0.81.0
     # via moto
 charset-normalizer==3.3.0
     # via
@@ -281,6 +283,7 @@ click==8.1.7
     #   databricks-cli
     #   distributed
     #   flask
+    #   jupyter-cache
     #   mlflow
     #   ray
     #   semgrep
@@ -314,7 +317,6 @@ cmaes==0.10.0
 colorama==0.4.6
     # via
     #   bayesian-optimization
-    #   nbdime
     #   semgrep
 coloredlogs==15.0.1
     # via onnxruntime
@@ -359,7 +361,7 @@ cryptography==38.0.1
     #   python-jose
     #   sshpubkeys
     #   trustme
-cycler==0.12.0
+cycler==0.12.1
     # via matplotlib
 cython==0.29.32
     # via
@@ -425,17 +427,15 @@ docker==6.1.3
     #   pytest-docker-tools
 docker-pycreds==0.4.0
     # via wandb
-docutils==0.17.1
+docutils==0.18.1
     # via
     #   -r /ray/ci/../python/requirements/lint-requirements.txt
-    #   myst-nb
     #   myst-parser
     #   pydata-sphinx-theme
     #   sphinx
     #   sphinx-click
     #   sphinx-jsonschema
     #   sphinx-tabs
-    #   sphinx-togglebutton
 dopamine-rl==4.0.5 ; (sys_platform != "darwin" or platform_machine != "arm64") and python_version >= "3.8"
     # via
     #   -r /ray/ci/../python/requirements/ml/rllib-test-requirements.txt
@@ -455,7 +455,6 @@ entrypoints==0.4
     # via
     #   jupyter-client
     #   mlflow
-    #   nbconvert
 et-xmlfile==1.1.0
     # via openpyxl
 etils==1.3.0
@@ -535,7 +534,7 @@ flatbuffers==2.0.7
     #   tf2onnx
 flax==0.7.2
     # via dopamine-rl
-fonttools==4.43.0
+fonttools==4.43.1
     # via matplotlib
 fqdn==1.5.1
     # via jsonschema
@@ -579,7 +578,6 @@ gitdb==4.0.10
 gitpython==3.1.37
     # via
     #   mlflow
-    #   nbdime
     #   sigopt
     #   wandb
 glfw==2.6.2
@@ -600,7 +598,7 @@ google-api-python-client==2.65.0
     # via -r /ray/ci/../python/requirements/test-requirements.txt
 google-apitools==0.5.32
     # via gsutil
-google-auth==2.23.2
+google-auth==2.23.3
     # via
     #   google-api-core
     #   google-api-python-client
@@ -615,9 +613,9 @@ google-auth-httplib2==0.1.1
     # via google-api-python-client
 google-auth-oauthlib==0.4.6
     # via tensorboard
-google-cloud-bigquery==3.11.0
+google-cloud-bigquery==3.12.0
     # via -r /ray/ci/../python/requirements/ml/data-test-requirements.txt
-google-cloud-bigquery-storage==2.20.0
+google-cloud-bigquery-storage==2.22.0
     # via -r /ray/ci/../python/requirements/ml/data-test-requirements.txt
 google-cloud-core==2.3.3
     # via
@@ -637,7 +635,7 @@ google-resumable-media==2.6.0
     # via
     #   google-cloud-bigquery
     #   google-cloud-storage
-googleapis-common-protos==1.60.0
+googleapis-common-protos==1.61.0
     # via
     #   google-api-core
     #   grpcio-status
@@ -732,7 +730,7 @@ httpx==0.24.1
     # via
     #   fastapi
     #   gradio
-huggingface-hub==0.17.3
+huggingface-hub==0.18.0
     # via
     #   datasets
     #   evaluate
@@ -771,12 +769,15 @@ importlib-metadata==4.10.0
     #   gym
     #   gymnasium
     #   jax
+    #   jupyter-cache
     #   jupyter-ydoc
     #   jupyterlab-server
     #   markdown
     #   mlflow
     #   myst-nb
+    #   nbconvert
     #   numba
+    #   sphinx
 importlib-resources==5.13.0
     # via
     #   ale-py
@@ -793,6 +794,7 @@ iniconfig==2.0.0
     # via pytest
 ipykernel==6.25.2
     # via
+    #   myst-nb
     #   nbclassic
     #   notebook
 ipython==8.12.3
@@ -800,21 +802,17 @@ ipython==8.12.3
     #   -r /ray/ci/../python/requirements/docker/ray-docker-requirements.txt
     #   ipykernel
     #   ipywidgets
-    #   jupyter-sphinx
     #   jupyterlab
     #   myst-nb
     #   sigopt
 ipython-genutils==0.2.0
     # via
-    #   ipywidgets
     #   nbclassic
     #   notebook
-ipywidgets==7.8.1
+ipywidgets==8.1.1
     # via
     #   -r /ray/ci/../python/requirements/docker/ray-docker-requirements.txt
     #   ax-platform
-    #   jupyter-sphinx
-    #   myst-nb
 isodate==0.6.1
     # via msrest
 isoduration==20.11.0
@@ -842,7 +840,7 @@ jaxlib==0.4.13
     #   orbax-checkpoint
 jedi==0.19.1
     # via ipython
-jinja2==3.0.3
+jinja2==3.1.2
     # via
     #   -r /ray/ci/../python/requirements/test-requirements.txt
     #   aim
@@ -862,10 +860,8 @@ jinja2==3.0.3
     #   myst-parser
     #   nbclassic
     #   nbconvert
-    #   nbdime
     #   notebook
     #   sphinx
-    #   sphinx-tabs
     #   sphinxcontrib-redoc
     #   torch
     #   torch-geometric
@@ -917,7 +913,7 @@ jsonschema-spec==0.1.6
     # via openapi-spec-validator
 junit-xml==1.9
     # via cfn-lint
-jupyter-cache==0.4.3
+jupyter-cache==0.6.1
     # via myst-nb
 jupyter-client==7.3.4
     # via
@@ -926,13 +922,14 @@ jupyter-client==7.3.4
     #   nbclassic
     #   nbclient
     #   notebook
-jupyter-core==5.3.2
+jupyter-core==5.4.0
     # via
     #   ipykernel
     #   jupyter-client
     #   jupyter-server
     #   jupyterlab
     #   nbclassic
+    #   nbclient
     #   nbconvert
     #   nbformat
     #   notebook
@@ -941,20 +938,14 @@ jupyter-events==0.6.3
 jupyter-server==1.24.0
     # via
     #   jupyter-server-fileid
-    #   jupyter-server-mathjax
     #   jupyterlab
     #   jupyterlab-server
     #   nbclassic
-    #   nbdime
     #   notebook-shim
 jupyter-server-fileid==0.9.0
     # via jupyter-server-ydoc
-jupyter-server-mathjax==0.2.6
-    # via nbdime
 jupyter-server-ydoc==0.6.1
     # via jupyterlab
-jupyter-sphinx==0.3.2
-    # via myst-nb
 jupyter-ydoc==0.2.5
     # via
     #   jupyter-server-ydoc
@@ -965,9 +956,9 @@ jupyterlab-pygments==0.2.2
     # via nbconvert
 jupyterlab-server==2.24.0
     # via jupyterlab
-jupyterlab-widgets==1.1.7
+jupyterlab-widgets==3.0.9
     # via ipywidgets
-jupytext==1.13.6
+jupytext==1.15.2
     # via
     #   -r /ray/ci/../doc/requirements-doc.txt
     #   -r /ray/ci/../python/requirements/test-requirements.txt
@@ -1012,13 +1003,12 @@ lxml==4.9.1
     # via
     #   -r /ray/ci/../python/requirements/test-requirements.txt
     #   dm-control
-    #   nbconvert
     #   vsphere-automation-sdk
 lz4==4.3.2
     # via -r /ray/ci/../python/requirements.txt
 mako==1.2.4
     # via alembic
-markdown==3.4.4
+markdown==3.5
     # via
     #   mlflow
     #   tensorboard
@@ -1050,7 +1040,7 @@ matplotlib-inline==0.1.6
     #   ipython
 mccabe==0.6.1
     # via flake8
-mdit-py-plugins==0.2.8
+mdit-py-plugins==0.3.5
     # via
     #   jupytext
     #   markdown-it-py
@@ -1059,7 +1049,7 @@ memray==1.10.0 ; platform_system != "Windows" and sys_platform != "darwin" and p
     # via -r /ray/ci/../python/requirements/test-requirements.txt
 minigrid==2.1.1
     # via -r /ray/ci/../python/requirements/ml/rllib-test-requirements.txt
-mistune==0.8.4
+mistune==3.0.2
     # via nbconvert
 ml-dtypes==0.2.0
     # via
@@ -1137,11 +1127,11 @@ mypy-extensions==1.0.0
     # via
     #   black
     #   mypy
-myst-nb==0.13.1
+myst-nb==0.17.2
     # via
     #   -r /ray/ci/../doc/requirements-doc.txt
     #   -r /ray/ci/../python/requirements/test-requirements.txt
-myst-parser==0.15.2
+myst-parser==0.18.1
     # via
     #   -r /ray/ci/../doc/requirements-doc.txt
     #   -r /ray/ci/../python/requirements/test-requirements.txt
@@ -1150,37 +1140,31 @@ nbclassic==1.0.0
     # via
     #   jupyterlab
     #   notebook
-nbclient==0.5.13
+nbclient==0.7.4
     # via
     #   jupyter-cache
+    #   myst-nb
     #   nbconvert
-nbconvert==6.5.4
+nbconvert==7.9.2
     # via
     #   jupyter-server
-    #   jupyter-sphinx
-    #   myst-nb
     #   nbclassic
     #   notebook
-nbdime==3.2.1
-    # via jupyter-cache
 nbformat==5.9.2
     # via
     #   jupyter-cache
     #   jupyter-server
-    #   jupyter-sphinx
     #   jupytext
     #   myst-nb
     #   nbclassic
     #   nbclient
     #   nbconvert
-    #   nbdime
     #   notebook
 nest-asyncio==1.5.8
     # via
     #   ipykernel
     #   jupyter-client
     #   nbclassic
-    #   nbclient
     #   notebook
     #   orbax-checkpoint
 netifaces==0.11.0
@@ -1196,12 +1180,10 @@ networkx==2.6.3 ; python_version < "3.11"
     #   torch
 nevergrad==0.4.3.post7
     # via -r /ray/ci/../python/requirements/ml/tune-requirements.txt
-ninja==1.11.1
+ninja==1.11.1.1
     # via deepspeed
 notebook==6.5.6
-    # via
-    #   jupyterlab
-    #   widgetsnbextension
+    # via jupyterlab
 notebook-shim==0.2.3
     # via nbclassic
     # via vsphere-automation-sdk
@@ -1379,7 +1361,7 @@ optuna==3.2.0
     # via -r /ray/ci/../python/requirements/ml/tune-requirements.txt
 orbax-checkpoint==0.2.3
     # via flax
-orjson==3.9.7
+orjson==3.9.9
     # via
     #   fastapi
     #   gradio
@@ -1472,7 +1454,7 @@ pbr==5.11.1
     # via
     #   jschema-to-python
     #   sarif-om
-peewee==3.16.3
+peewee==3.17.0
     # via semgrep
 pettingzoo==1.23.1 ; python_version >= "3.7"
     # via -r /ray/ci/../python/requirements/ml/rllib-test-requirements.txt
@@ -1630,7 +1612,7 @@ pydantic==1.10.12
     #   deepspeed
     #   fastapi
     #   gradio
-pydata-sphinx-theme==0.8.1
+pydata-sphinx-theme==0.14.1
     # via sphinx-book-theme
 pydeprecate==0.3.2
     # via pytorch-lightning
@@ -1650,10 +1632,11 @@ pygments==2.13.0
     # via
     #   -r /ray/ci/../doc/requirements-doc.txt
     #   -r /ray/ci/../python/requirements/test-requirements.txt
+    #   accessible-pygments
     #   ipython
     #   knack
     #   nbconvert
-    #   nbdime
+    #   pydata-sphinx-theme
     #   rich
     #   sphinx
     #   sphinx-tabs
@@ -1732,7 +1715,7 @@ pytest-docker-tools==3.1.3
     # via -r /ray/ci/../python/requirements/test-requirements.txt
 pytest-fixture-config==1.7.0
     # via pytest-virtualenv
-pytest-forked==1.4.0
+pytest-forked==1.6.0
     # via -r /ray/ci/../python/requirements/test-requirements.txt
 pytest-httpserver==1.0.6
     # via -r /ray/ci/../python/requirements/test-requirements.txt
@@ -1740,7 +1723,7 @@ pytest-lazy-fixture==0.6.3
     # via -r /ray/ci/../python/requirements/test-requirements.txt
 pytest-remotedata==0.3.2
     # via -r /ray/ci/../python/requirements/ml/tune-test-requirements.txt
-pytest-repeat==0.9.2
+pytest-repeat==0.9.3
     # via -r /ray/ci/../python/requirements/ml/data-test-requirements.txt
 pytest-rerunfailures==11.1.2
     # via -r /ray/ci/../python/requirements/test-requirements.txt
@@ -1811,6 +1794,7 @@ pyyaml==6.0.1
     #   gradio
     #   huggingface-hub
     #   jsonschema-spec
+    #   jupyter-cache
     #   jupyter-events
     #   jupytext
     #   knack
@@ -1827,7 +1811,6 @@ pyyaml==6.0.1
     #   pytorch-lightning
     #   ray
     #   sigopt
-    #   sphinx-book-theme
     #   sphinx-external-toc
     #   sphinx-jsonschema
     #   sphinxcontrib-redoc
@@ -1849,7 +1832,7 @@ querystring-parser==1.2.4
     #   raydp
     #   tune-sklearn
     #   xgboost-ray
-raydp==1.7.0b20230919.dev0
+raydp==1.7.0b20231009.dev0
     # via -r /ray/ci/../python/requirements/ml/data-requirements.txt
 recsim==0.2.4 ; (sys_platform != "darwin" or platform_machine != "arm64") and python_version >= "3.8"
     # via -r /ray/ci/../python/requirements/ml/rllib-test-requirements.txt
@@ -1888,7 +1871,6 @@ requests==2.31.0
     #   moto
     #   msal
     #   msrest
-    #   nbdime
     #   ray
     #   requests-oauthlib
     #   requests-toolbelt
@@ -1957,7 +1939,7 @@ s3fs==2023.5.0 ; python_version >= "3.8"
     # via -r /ray/ci/../python/requirements/ml/core-requirements.txt
 s3transfer==0.6.2
     # via boto3
-safetensors==0.3.3
+safetensors==0.4.0
     # via timm
 sarif-om==1.0.4
     # via cfn-lint
@@ -2027,7 +2009,7 @@ send2trash==1.8.2
     #   notebook
 sentencepiece==0.1.96
     # via -r /ray/ci/../python/requirements/ml/train-test-requirements.txt
-sentry-sdk==1.31.0
+sentry-sdk==1.32.0
     # via
     #   comet-ml
     #   wandb
@@ -2085,7 +2067,6 @@ six==1.16.0
     #   querystring-parser
     #   responses
     #   rfc3339-validator
-    #   sphinx-sitemap
     #   sphinxcontrib-redoc
     #   tensorflow
     #   tensorflow-probability
@@ -2111,12 +2092,11 @@ soundfile==0.12.1
     # via -r /ray/ci/../python/requirements/ml/data-test-requirements.txt
 soupsieve==2.5
     # via beautifulsoup4
-sphinx==4.3.2
+sphinx==5.3.0
     # via
     #   -r /ray/ci/../doc/requirements-doc.txt
     #   -r /ray/ci/../python/requirements/test-requirements.txt
     #   autodoc-pydantic
-    #   jupyter-sphinx
     #   myst-nb
     #   myst-parser
     #   pydata-sphinx-theme
@@ -2128,30 +2108,27 @@ sphinx==4.3.2
     #   sphinx-remove-toctrees
     #   sphinx-sitemap
     #   sphinx-tabs
-    #   sphinx-togglebutton
     #   sphinx-version-warning
     #   sphinxcontrib-redoc
     #   sphinxemoji
-sphinx-book-theme==0.3.3
+sphinx-book-theme==1.0.1
     # via -r /ray/ci/../doc/requirements-doc.txt
-sphinx-click==3.0.2
+sphinx-click==5.0.1
     # via -r /ray/ci/../doc/requirements-doc.txt
-sphinx-copybutton==0.4.0
+sphinx-copybutton==0.5.2
     # via -r /ray/ci/../doc/requirements-doc.txt
-sphinx-design==0.4.1
+sphinx-design==0.5.0
     # via -r /ray/ci/../doc/requirements-doc.txt
-sphinx-external-toc==0.2.4
+sphinx-external-toc==0.3.1
     # via -r /ray/ci/../doc/requirements-doc.txt
-sphinx-jsonschema==1.17.2
+sphinx-jsonschema==1.19.1
     # via -r /ray/ci/../doc/requirements-doc.txt
 sphinx-remove-toctrees==0.0.3
     # via -r /ray/ci/../doc/requirements-doc.txt
-sphinx-sitemap==2.2.0
+sphinx-sitemap==2.5.1
     # via -r /ray/ci/../doc/requirements-doc.txt
-sphinx-tabs==3.4.0
+sphinx-tabs==3.4.1
     # via -r /ray/ci/../doc/requirements-doc.txt
-sphinx-togglebutton==0.2.3
-    # via myst-nb
 sphinx-version-warning==1.1.2
     # via -r /ray/ci/../doc/requirements-doc.txt
 sphinxcontrib-applehelp==1.0.4
@@ -2202,6 +2179,7 @@ sympy==1.12
 tabulate==0.9.0
     # via
     #   databricks-cli
+    #   jupyter-cache
     #   knack
 tblib==2.0.0
     # via
@@ -2347,7 +2325,6 @@ tornado==6.1
     #   jupyter-server
     #   jupyterlab
     #   nbclassic
-    #   nbdime
     #   notebook
     #   pymars
     #   terminado
@@ -2420,11 +2397,14 @@ typing-extensions==4.5.0
     #   huggingface-hub
     #   ipython
     #   mypy
+    #   myst-nb
+    #   myst-parser
     #   nevergrad
     #   onnx
     #   orbax-checkpoint
     #   polars
     #   pydantic
+    #   pydata-sphinx-theme
     #   pytorch-lightning
     #   rich
     #   semgrep
@@ -2464,7 +2444,7 @@ uvicorn==0.22.0
     #   aim
     #   fastapi
     #   gradio
-uvloop==0.17.0
+uvloop==0.18.0
     # via
     #   pymars
     #   uvicorn
@@ -2515,7 +2495,7 @@ webencodings==0.5.1
     # via
     #   bleach
     #   tinycss2
-websocket-client==1.6.3
+websocket-client==1.6.4
     # via
     #   comet-ml
     #   docker
@@ -2537,9 +2517,8 @@ wheel==0.41.2
     # via
     #   astunparse
     #   lightgbm
-    #   sphinx-togglebutton
     #   tensorboard
-widgetsnbextension==3.6.6
+widgetsnbextension==4.0.9
     # via ipywidgets
 wrapt==1.15.0
     # via
