--- a/ci/docker/ml.build.wanda.yaml
+++ b/ci/docker/ml.build.wanda.yaml
@@ -4,6 +4,7 @@ dockerfile: ci/docker/ml.build.Dockerfile
 srcs:
   - ci/env/install-dependencies.sh
   - ci/env/install-horovod.sh
+  - ci/env/install-hdfs.sh
   - python/requirements.txt
   - python/requirements_compiled.txt
   - python/requirements/test-requirements.txt
